infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bataranetwork-service
  labels:
    app: bataranetwork
spec:
  selector:
    app: bataranetwork
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: http
  - name: grpc
    protocol: TCP
    port: 50051
    targetPort: grpc
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: metrics
